# siki-logdata-tsv-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.toml
config/vibrato_dict/: ここにVibratoの辞書を解凍して入れる.txt
src/: main_A.py  main_B_1.py  main_B_2.py
src/mylib/logdata_convert/: log_convert_tsv.py
src/mylib/text_wakatigaki/: use_vibrato.py
src/mylib/word_analysis/: csv_word_analysis.py  log_word_analysis.py
