[project]
name = "siki-logdata-tsv-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "pip-licenses>=5.0.0",
    "polars>=1.24.0",
    "pytomlpp>=1.0.13",
    "tqdm>=4.67.1",
    "vibrato>=0.2.0",
    "zstandard>=0.23.0",
]
